--- a/SP2025Assignment1-BaileyLiddle/wwwroot/index.html
+++ b/SP2025Assignment1-BaileyLiddle/wwwroot/index.html
@@ -3,8 +3,30 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <style>
+        body {
+            background-color: #2c3e50;
+            color: #ecf0f1;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+
+    </style>
 </head>
 <body>
-    Hello World extra
+    <div>
+        <h1 id="Title">Back in the 90's</h1>
+        <img id="CoverArt" src="https://th.bing.com/th/id/R.bc3bb9294448fffd0c6aac89a759ca69?rik=RywTUzhGSecqzQ&riu=http%3a%2f%2fgetwallpapers.com%2fwallpaper%2ffull%2f4%2f7%2fe%2f996858-vertical-bojack-horseman-wallpapers-1920x1080-for-retina.jpg&ehk=CG8WLm4vrr82QXNHqf%2f1SpqbdVnr87PthRmcpjFI%2f54%3d&risl=&pid=ImgRaw&r=0">
+        <h5 id="Rating">8.8/10</h5>
+        <iframe id="Trailer" width="1280" height="720" src="https://www.youtube.com/embed/ZOGxOQxXjdo" title="BoJack Horseman | Season 6 Trailer | Netflix" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <a href="https://www.imdb.com/title/tt3398228/" target="_blank">View on IMDB</a>
+        <p id="Summary">After starring in the popular sitcom "Horsin' Around" in the late 80s and early 90s, BoJack Horseman struggles with his deteriorating popularity, depression, addiction, and maintaining the relationships with those he cares about, but can't seem to stop hurting, all while living in the satirical, pun-filled city of Hollywood, California.</p>
+        <ul id="Actors">
+            <li>Will Arnett</li>
+            <li>Aaron Paul</li>
+            <li>Alison Brie</li>
+        </ul>
+    </div>
 </body>
 </html>
